k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-sample
  labels:
    app: tomcat-sample
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: tomcat-sample
